# cli-othello

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/cli_othello/: __init__.py  ai.py  board.py  cli.py  ui.py
